<resources>
    <string name="app_name">Ecommerce</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Inicio</string>
    <string name="nav_near_me">Cerca de mí</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_brand">Marca</string>
    <string name="nav_category">Categoría</string>


    <string name="header_user">Ricardo Bravo</string>
    <string name="header_email">ricardobravo@outlook.com</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_presentation">PresentationActivity</string>


    <!--PresentationActivity-->
    <string name="pa_what_is_smile">¿QUÉ ES SMILE?</string>
    <string name="pa_what_is_smile_description">Smile es la mejor opción a la hora de buscar una oferta.</string>
    <string name="pa_all_benefits">TODOS TUS BENEFICIOS</string>
    <string name="pa_all_benefits_description">Agrega una tarjeta para tener tus beneficios en un sólo lugar.</string>
    <string name="pa_much_filters">MUCHOS FILTROS</string>
    <string name="pa_much_filters_description">Una vez agregada la tarjeta podrás encontrar todas tus ofertas aquí.</string>
    <string name="pa_specific_notification">NOTIFICATION ESPECÍFICAS</string>
    <string name="pa_specific_notification_description">Marca negocios como tus favoritos para recibir notificaciones
    de aquellas marcas que te gustan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!---->

    <string name="verify_connection">Verifique su conexión a internet</string>
    <string name="error_ocurred">Ocurrió un error</string>
    <string name="success">success</string>
    <string name="retry">Reintentar</string>
    <string name="price_text">S/. %1$s</string>
    <string name="number_product">%1$s Productos</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_brand">Marcas</string>
</resources>
